fixes issue with 0 distortion uniform on PC + starts implementing orthographic hud camera

--- a/index.css
+++ b/index.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'SuperSmashTV';
+  src: url('fonts/SuperSmashTV.ttf');
+}
+
+@font-face {
+  font-family: 'TelegramaRaw';
+  src: url('fonts/telegrama_raw.eot'); /* IE9 Compat Modes */
+  src: url('fonts/telegrama_raw.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/telegrama_raw.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/telegrama_raw.woff') format('woff'), /* Pretty Modern Browsers */
+       url('fonts/telegrama_raw.ttf')  format('truetype'); /* Safari, Android, iOS */
+  font-weight: normal;
+  font-style: normal;
+}
+
 body { margin: 0; }
 canvas { width: 100%; height: 100% }
 
@@ -82,9 +98,4 @@ input { outline: 0; }
   .controls #volume-bar {
     bottom: 6px;
   }
-}
-
-@font-face {
-  font-family: 'SuperSmashTV';
-  src: url('fonts/SuperSmashTV.ttf');
 }
